--- a/yoga-sutras/index.html
+++ b/yoga-sutras/index.html
@@ -159,13 +159,148 @@
 		</div><!-- /triggers -->
 
 		<div id="pt-main" class="pt-perspective">
-			<div class="pt-page pt-page-1"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> ONE</h1></div>
-			<div class="pt-page pt-page-2"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> TWO</h1></div>
-			<div class="pt-page pt-page-3"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> THREE</h1></div>
-			<div class="pt-page pt-page-4"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> FOUR</h1></div>
-			<div class="pt-page pt-page-5"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> FIVE</h1></div>
-			<div class="pt-page pt-page-6"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> SIX</h1></div>
-			<div class="pt-page pt-page-7"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> SEVEN</h1></div>
+			<div class="pt-page pt-page-1"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> ONE</h1><p>I am space. I am the sun. I am the directions, above and below. I am the gods. I am the demons. I am all beings. I am darkness. I am the earth. I am the ocean. I am the dust, the wind, the fire and all this world. I am omnipresent.
+How can there be anything but me, the spirit?
+You will rise beyond joy and sorrow.
+The world exists in me, the self, the infinite consciousness.
+Even as a reflection seems to exist in the mirror.
+I am the fragrance in flowers, the light in radiance, and even in that light I am the experience.
+Whatever mobile or immobile beings exist in this universe, I am their supreme truth, or consciousness, free from conceptualization.
+I am the very essence in all things in the universe.
+Just as butter exists in milk and liquidity exists in water, even so as the energy of consciousness I exist in all that exists.
+When we are established in Being, the mind, body and the senses are playthings.
+Purity, total fulfillment of all desires, the absence of cravings, friendliness to all, truthfulness, wisdom, tranquility and blissfulness, sweetness of speech, supreme magnanimity, lustrousness, one-pointedness, realization of cosmic events, fearlessness, absence of divided consciousness – these are the constant experiences of one who has established in Being.</p></div>
+			<div class="pt-page pt-page-2"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> TWO</h1><p>He sees the truth who sees that there is no division at all between the self and the other and that the one infinite light of consciousness exists as the sole reality. Whatever is in the mind is like a city in the clouds. The emergence of this world is no more than thoughts manifesting themselves.
+Be firmly rooted in the non-existence of your ego-self. It came into being through ignorance and delusion. When we lose this false identity, we will realize our essence as the supreme Being or infinite consciousness, and we will be freed from all conditioning and all limitations.
+The universe is but a long dream. The ego-sense and also the fancy that there are others are as real as dream objects. The sole reality is the infinite consciousness which is omnipresent, pure, tranquil, omnipotent.
+He sees the truth who sees that the non-dual consciousness which dwells in all beings is omnipotent and omnipresent.
+When bondage is non-existent, surely liberation is false too.
+All these worlds are no more than modifications of consciousness.
+In the infinite consciousness we have created each other in our fancy.
+We create worlds as the natural expression of our own being.
+Hallucinations become reality when experienced by many.
+Even as a statement made by very many people is accepted as truth.
+When these are incorporated into our own lives, they acquire their own reality.
+After all, what is the truth concerning the things of this world, except how they are experienced in our own consciousness.
+Enlightened beings, although they are constantly engaged in activity, do nothing.
+The enlightened being's inner state is: “Even though I am constantly engaged in activity, I do nothing.”
+All happens. Living happens. There is nothing to cling to or grasp, nothing to renounce or run away from.</p></div>
+			<div class="pt-page pt-page-3"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> THREE</h1><p>What is the duration of a life span in eternity. This life span of ours is but a trivial moment. Eternity stretches before and after it.
+Existence is the infinite unbounded consciousness. A life span is just a single thought in that consciousness.
+That which is known as a person is nothing other than the self-experiencing of the infinite.
+In truth, it is the magnificent and infinite ocean of consciousness in which numerous universes appear and disappear like ripples and waves.
+Just as the silk-worm spins its cocoon and is caught in it, so do humans weave the web of their own concepts and are caught in them.
+When we turn away from the notions of “I and the world” we are liberated.
+The notion of “I am this” is the sole bondage here.
+If the mind is elsewhere, the taste of food that is being eaten is not really experienced. If the mind is elsewhere, we do not see what is right in front of us.
+The suns are born of the mind, but not the other way around.
+When the mind ceases its agitation all the good and noble qualities blossom. There is peace and purity of heart. We do not fall into doubt or error. There is friendship which promotes the happiness of all. Worries and anxieties dry up.
+When the darkness of ignorance is dispelled, the inner light shines brightly. Mental distractions and distress cease.
+Just as the ocean becomes calm when the wind ceases to agitate its surface, infinite consciousness alone shines.
+Just as space is unaffected and untouched by the clouds that float in it, this infinite consciousness is unaffected and untouched by the universe that appears in it.
+Just as light is not seen except through the refracting agent, even so the infinite consciousness is revealed through these various bodies.
+It is essentially nameless and formless, but names and forms are associated to its reflection.
+When many candles are kindled from one another, it is the same flame that burns in all candles.
+Even so the one Brahman appears to be many.
+When one contemplates the unreality of this diversity, she is freed from sorrow.</p></div>
+			<div class="pt-page pt-page-4"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> FOUR</h1><p>The self does not go, nor does it come.
+For space and time derive their meaning from consciousness alone.
+Where can the self go, when all that is, is within it.
+If a part is taken from one place to another, the space within it does not move from one space to another, for everything is forever in space.
+If the mind is fully saturated with something, whatever happens to the body does not affect the mind.
+The mind is even unaffected by the good and bad intentions of another, even as the firmly established mountain is not moved by the horns of a little beast.
+The body does not create the mind, but the mind creates the body.
+The mind also is the seed for the body.
+When the tree dies, the seed does not, but when the seed perishes, the tree dies with it.
+If the body perishes, the mind can create other bodies for itself.
+When we are bound by the ego-sense “me” and by the conditioning of the mind, even if we are regarded as a great person or a person of great learning, we can be defeated even by a child.
+The unreal has no existence and the real does not cease to exist.
+When the infinite vibrates, the worlds appear to emerge.
+When it does not vibrate, the worlds appear to submerge.
+Even as when a torch is spun fast, a fiery circle appears and when it is held steady, the circle vanishes.
+Vibrating or not vibrating, it is the same everywhere at all times.
+Not realizing it, we are subject to delusion.
+When it is realized, all cravings and anxieties vanish.
+In everyone’s consciousness there is a different idea of the world.
+Death and other such experiences are like cosmic dissolution, the night of cosmic consciousness.
+When that comes to an end, we wake up to our own mental creation, which is the manifestation of our ideas, notions and delusions.
+Even as the cosmic being creates the universe after comic dissolution, we create our own world after death.</p></div>
+			<div class="pt-page pt-page-5"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> FIVE</h1><p>When the intelligence is established in the conviction of its ethereal nature, the physical body is forgotten.
+Even as in youth one forgets life as a fetus. 
+In truth, the cosmic mind, the personal mind and the infinite space are all of one substance, pervaded by the infinite consciousness.
+Therefore, regardless of what you have created, you can create as many worlds as you like.
+Individualized consciousness appears as the subtle or ethereal body.
+And when it becomes gross, that itself appears to be the physical or material body.
+That individualized consciousness itself is known as the soul, where the potentialities are in an extremely subtle state.
+And when this juggling of the soul ceases, that itself is the divine or supreme Being.
+The one infinite consciousness alone shines in all names and forms.
+The individualized consciousness perceives what it thinks it perceives on account of its conditioning.
+On account of ignorance, when the notion of an ego-self arises, at that very moment the delusion of a beginning, a middle and an end also arises.
+Millions of universes appear in the infinite consciousness, like specs of dust in a beam of light streaming into the room through a hole in the roof.
+Just as in this universe, there are countless beings of various species, in other universes too,
+there are similar beings with different bodies suited to their universe.
+The inexorable passage of invisible and intangible time eats up all creatures.
+Knowing this, the wise keep their attention on the timeless.
+You are at peace when you are established in witness consciousness.
+The mind only knows its own point of view, which it considers the truth.
+I am the infinite consciousness whose kinetic state alone appears as the whole universe.
+The ignorant man’s body is composed and decomposed on account of the status of his mental conditioning.
+In the case of one who has no such conditioning, there is no momentum for decomposition.</p></div>
+			<div class="pt-page pt-page-6"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> SIX</h1><p>If you do not have the notion “This I am and this I am not” then you will not limit your consciousness.
+If your ego-self is dead, you will not limit your consciousness. 
+If, in you, the very notion of calamity, poverty, elation, pride, dullness and agitation do not arise, then your ego-self is dead, then you will be liberated while living.
+Utter purity will prevail in you because you will be a liberated sage whose ego-mind is dead.
+Such a mind of a liberated sage is full of noble qualities. 
+Intense friendliness, love, compassion and natural goodness will alone remain in you.
+What is the truth?
+I have nothing to do with sorrow, with actions, with delusion, with grasping or clinging.
+I am at peace, free from sorrow.
+I am Brahman, such is the truth.
+I am free from all defects.
+I am the all.
+I do not seek anything, nor do I abandon anything.
+I am Brahman, such is the truth.
+I am blood.
+I am flesh.
+I am body.
+I am consciousness.
+I am the mind also.
+I am Brahman, such is the truth.
+I am the firmament.
+I am space.
+I am the sun, and the moon, and the stars, and the galaxies.
+I am all things.
+I am Brahman, such is the truth.
+I am a blade of grass.
+I am the earth.
+I am a tree stub.
+I am the forest.
+I am the mountain.
+I am the ocean.
+I am the non-dual Brahman, such is the truth.
+I am the consciousness in which all things are strong and through whose power all beings engage in their actions.
+I am the essence of all things, such is the truth.
+In the infinite consciousness in every atom, infinite universes come and go, like particles of dust in a beam of sun light that shines through a hole in the roof.
+These come and go like ripples on the vast ocean of consciousness.</p></div>
+			<div class="pt-page pt-page-7"><h1><span>Yoga Sutras</span><strong>SUTRA</strong> SEVEN</h1><p>Renounce all notions and then renounce the renouncer of those notions.
+When even the notion of the ego-sense has ceased you will be like infinite space – free, unbounded, eternal.
+As long as there is a “you” and “I”, there is no liberation, no freedom.
+Even as movement is inherent in air, manifestation is inherent in consciousness.
+Whatever the mind thinks of, that alone it sees.
+We who know the deathless nature of the self are not afraid of death.
+Egotism is but an idea based on a false association of the self with the physical elements.
+In reality, this egotism does not exist anymore than water exists in the mirage.
+This life time of ours is transient as autumn clouds.
+To watch the birth and death of beings is like looking at the movements of a dance.
+A lifetime is like a flash of lightning in the sky, rushing by like a torrent down the steep mountain.
+But now, I am free.
+I am grounded in Being.
+I am grounded in the infinite consciousness.
+And I can see lifetimes ripple by like waves in the vast ocean of consciousness.
+I am free.
+I am awake.
+I am liberated.
+</p></div>
 		</div>
 
 		<div class="pt-message">
