--- a/donors-project/index.html
+++ b/donors-project/index.html
@@ -1,650 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/w3.css">
-<link rel="icon" type="image/png" href="KWOTfavicon.png">
-<style>
-body {font-family: Arial;}
-
-/* Style the tab */
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-    font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-}
-
-/* Table styles */
-table th {background-color:#81B6FE; color:#FFFFFF;}
-table {border-collapse: collapse;}
-table, th, td {
-    border: 1px solid black;
-	font-size: 1em;
-	padding: 0.5em;
-}
-
-/* Layout (column) styles */
-@media screen and (max-width: 600px) {
-    .column {
-        width: 100%;
-    }
-}
-
-.row {
-    display: flex;
-}
-
-.column {
-    flex: 50%;
-	padding:15px;
-}
-
-.right {
-
-}
-
-/* Form styles */
-input[type=text] {
-    border: 2px solid #81B6FE;
-    border-radius: 4px;
-	padding:14px 20px;
-	font-size:18px;
-	font-weight:bold;
-}
-
-input[type=button] {
-    background-color:#81B6FE;
-    border-radius: 4px;
-	padding:14px 20px;
-	font-size:18px;
-	font-weight:bold;
-	color:#FFFFFF;
-}
-
-input[type=date] {
-    border: 2px solid #81B6FE;
-    border-radius: 4px;
-	padding:14px 20px;
-	font-size:18px;
-	font-weight:bold;
-}
-
-.ExcelButton input[type=button]  {
-    background-color:#37bc76;
-    border-radius: 4px;
-	padding:14px 20px;
-	font-size:18px;
-	font-weight:bold;
-	color:#FFFFFF;
-}
-
-/* Tooltip container */
-.tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 500px;
-    background-color: #00aadd;
-    color: #fff;
-    text-align: left;
-    padding: 10px 10px;
-    border-radius: 6px;
-	border: 1px solid #FFFFFF;
-	top: -5px;
-    left: 105%;
- 
-    /* Position the tooltip text - see examples below! */
-    position: absolute;
-    z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-}
-
-/* SELECT element styles START */
-/*the container must be positioned relative:*/
-.custom-select {
-  position: relative;
-  font-family: Arial;
-}
-.custom-select select {
-  display: none; /*hide original SELECT element:*/
-}
-.select-selected {
-  background-color: DodgerBlue;
-}
-/*style the arrow inside the select element:*/
-.select-selected:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
-}
-/*point the arrow upwards when the select box is open (active):*/
-.select-selected.select-arrow-active:after {
-  border-color: transparent transparent #fff transparent;
-  top: 7px;
-}
-/*style the items (options), including the selected item:*/
-.select-items div,.select-selected {
-  color: #ffffff;
-  padding: 8px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-  user-select: none;
-}
-/*style items (options):*/
-.select-items {
-  position: absolute;
-  background-color: DodgerBlue;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-/*hide the items when the select box is closed:*/
-.select-hide {
-  display: none;
-}
-.select-items div:hover, .same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-/* SELECT element styles END */
-
-/* Chart CSS Start */
-body {
-  font-family: Verdana;
-  font-size: 12px;
-  padding: 10px;
-}
-
-#chartdiv {
-  width: 100%;
-  height: 500px;
-  font-size: 11px;
-}
-
-#data,
-#data th,
-#data td {
-  border: 1px solid #ccc;
-  padding: 10px;
-}
-
-#data th {
-  font-weight: bold;
-  background-color: #eee;
-}
-
-/* Chart CSS End */
-
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-}
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-    background-color: #ccc;
-}
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-}
-
-.accordion:after {
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-}
-
-.accordion .active:after {
-    content: "\2796"; /* Unicode character for "minus" sign (-) */
-}
-
-/* Loader Animation - Start */
-/* Center the loader */
-  
-#loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  margin: -75px 0 0 -75px;
-  width: 325px;
-  text-align: center;
-  }
-
-#loader > div {
-  width: 75px;
-  height: 75px;
-  background-color: #0D8ECF;
-
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-}
-
-#loader .bounce1 {
-	background-color: #FCD202;
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-
-#loader .bounce2 {
-   background-color: #B0DE09;
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-
-@-webkit-keyframes sk-bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0) }
-  40% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes sk-bouncedelay {
-  0%, 80%, 100% { 
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  } 40% { 
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
-  }
-}
-  
-  /* Add animation to "page content" */
-.animate-bottom {
-  position: relative;
-  -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 1s;
-  animation-name: animatebottom;
-  animation-duration: 1s
-}
-
-@-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 } 
-  to { bottom:0px; opacity:1 }
-}
-
-@keyframes animatebottom { 
-  from{ bottom:-100px; opacity:0 } 
-  to{ bottom:0; opacity:1 }
-}
-
-#realtimedata {
-  display: none;
-}
-
-#quotehistory {
-  display: none;
-}
-
-</style>
-
-
-<script>
-function openTab(evt, tabName) {
-    // Declare all variables
-    var i, tabcontent, tablinks;
-
-    // Get all elements with class="tabcontent" and hide them
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-        tabcontent[i].style.display = "none";
-    }
-
-    // Get all elements with class="tablinks" and remove the class "active"
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-        tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-
-    // Show the current tab, and add an "active" class to the button that opened the tab
-    document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.className += " active";
-}
-</script>
-
-<!-- Export table to Excel -->
-
-
-<script type="text/javascript">
-function ExportToExcelHistory(donorstable){
-       var htmltable= document.getElementById('donorstable');
-       var html = htmltable.outerHTML;
-       window.open('data:application/vnd.ms-excel,' + encodeURIComponent(html));
-    }
-</script>
-
-
-</head>
 <body>
-<div id="loader" style="display:none;">
-  <div class="bounce1"></div>
-  <div class="bounce2"></div>
-  <div class="bounce3"></div>
-</div>
-
-<div class="tab" style="padding-left:15px; background-color:purple;">
-<h1 style="color:#FFFFFF;">The <b>DONORS</b> Project | <span style="font-size:0.7em">an Omer Toledano Production</span></h1>
-</div>
-<div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'DonorsGraph')" id="defaultOpen">Donors Graph</button>
-</div>
-
-<div id="DonorsGraph" class="tabcontent">
-<h2>Donors Graph</h2>
+<script>
+$(document).ready(function() {
+    $('#example').DataTable( {
+        "ajax": 'https://www.blessingbethlehem.com/give-api/v1/donors/?key=07c1be6c3a4641631a1f917c1d807383&token=4f1832766828589c71a89a40ac2b5158'
+    } );
+} );
+</script>
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 
 
-
-<div class="row">
-
-<div class="column" style="background-color:#EEF8FE;">
-
-
-
-<p id="donorinfo" style="display:none;" class="animate-bottom"></p>
-
-<script type="text/javascript" src="js/amcharts.js"></script>
-<script type="text/javascript" src="js/serial.js"></script>
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-
-
-<!-- Get JSON DATA -->
-<script type="text/javascript">
-
-
-
-//Get JSON Data
-
-document.getElementById("StockSymbolinTitle").innerHTML = this.mysinglesymbol.value;
-
-ShowHistoryLoader();
-
-  var newdt, obj2, dbParam2, xmlhttp2, myObj2, y, txt2 = "";
-
-
-
-
-
-
-//Build Table JSON Data
-
-  obj2 = { "table":donorstable, "limit":20 };
-  dbParam2 = JSON.stringify(obj2);
-  xmlhttp2 = new XMLHttpRequest();
-  xmlhttp2.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      myObj2 = JSON.parse(this.responseText);
-	  
-      txt2 += "<table id='donorstable'>"
-	  txt2 += "<thead>"
-	  txt2 += "<tr><th colspan='4'>Donation Information for: ( " + myObj2.donors.info.donor_id + " )</th></tr>"
-	  txt2 += "<tr><th>datetime</th><th>open</th><th>high</th><th>low</th><th>close</th></tr>"
-	  txt2 += "</thead>"
-	  txt2 += "<tbody>"
-      for (y in myObj2.donors) {
+<table id="example" class="display" style="width:100%">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Extn.</th>
+                <th>Start date</th>
+                <th>Salary</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Extn.</th>
+                <th>Start date</th>
+                <th>Salary</th>
+            </tr>
+        </tfoot>
+    </table>
 	
-        txt2 += "<tr><td>" + myObj2.donors.info[y].donor_id + "</td><td>" + myObj2.donors.info[y].first_name + "</td><td>" + myObj2.donors.info[y].last_name + "</td><td>" + myObj2.donors.info[y].email + "</td></tr>";
-      }
-      txt2 += "</tbody>" 
-	  txt2 += "</table>"
-	  
-      document.getElementById("donorinfo").innerHTML = txt2;
-	  
-	  // amchart
-	  
-	  var chartConfig = {
-  "type": "serial",
-  "dataProvider": [],
-  "valueAxes": [{
-    "gridColor": "#FFFFFF",
-    "gridAlpha": 0.2,
-    "dashLength": 0
-  }],
-  "legend": {
-    "position": "top",
-	"align": "right",
-	"data": [{title: "Open", color:"#FF6600"},{title: "High", color:"#FCD202"},{title: "Low", color:"#B0DE09"},{title: "Close", color:"#0D8ECF"}]
-	},
-  "gridAboveGraphs": true,
-  "startDuration": 1,
-  "graphs": [],
-  "chartCursor": {
-    "categoryBalloonEnabled": false,
-    "cursorAlpha": 0,
-    "zoomable": false
-  },
-  "categoryField": "category",
-  "categoryAxis": {
-    "gridPosition": "start",
-    "gridAlpha": 0,
-	"labelRotation": 45
-  }
-};
-
-jQuery(document).ready(function() {
-  // get categories
-  jQuery('#donorstable thead th').each(function(index) {
-    if (index) { // skip the first column
-      chartConfig.graphs.push({
-        "balloonText": "[[category]]: <b>[[value]]</b>",
-        "fillAlphas": 0.8,
-        "lineAlpha": 0.2,
-        "type": "column",
-        "valueField": "value" + index
-      });
-    }
-  });
-
-  // get data points
-  jQuery('#donorstable tbody tr').each(function(index) {
-    var dataPoint = {};
-    jQuery(this).find('th,td').each(function(index2) {
-      if (jQuery(this).is('th')) { // category
-        dataPoint.category = this.innerHTML;
-      } else {
-        dataPoint['value' + index2] = Number(this.innerHTML);
-      }
-    });
-    chartConfig.dataProvider.push(dataPoint);
-  });
-
-  // make the chart
-  var chart = AmCharts.makeChart("chartdiv", chartConfig);
-  
-});
-	  
-    }
-  };
-  xmlhttp2.open("GET", "https://www.blessingbethlehem.com/give-api/v1/donors/?key=07c1be6c3a4641631a1f917c1d807383&token=4f1832766828589c71a89a40ac2b5158",true);
-  
-    
-  xmlhttp2.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-  xmlhttp2.send("y=" + dbParam2);
-  
-
-</script>
-</div>
-</div>
-
-<!-- Default TAB -->
-<script>
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
-
-<!-- AM Chart Table Example
-
-<table id="data">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Revenue</th>
-      <th>Expenses</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>North America</th>
-      <td>1000</td>
-      <td>400</td>
-    </tr>
-    <tr>
-      <th>South America</th>
-      <td>350</td>
-      <td>500</td>
-    </tr>
-    <tr>
-      <th>Europe</th>
-      <td>1200</td>
-      <td>450</td>
-    </tr>
-    <tr>
-      <th>Asia</th>
-      <td>800</td>
-      <td>400</td>
-    </tr>
-    <tr>
-      <th>Oceania</th>
-      <td>250</td>
-      <td>120</td>
-    </tr>
-  </tbody>
-</table> -->
-
-
-<!-- Select STYLE script -->
-<script>
-var x, i, j, selElmnt, a, b, c;
-/*look for any elements with the class "custom-select":*/
-x = document.getElementsByClassName("custom-select");
-for (i = 0; i < x.length; i++) {
-  selElmnt = x[i].getElementsByTagName("select")[0];
-  /*for each element, create a new DIV that will act as the selected item:*/
-  a = document.createElement("DIV");
-  a.setAttribute("class", "select-selected");
-  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
-  x[i].appendChild(a);
-  /*for each element, create a new DIV that will contain the option list:*/
-  b = document.createElement("DIV");
-  b.setAttribute("class", "select-items select-hide");
-  for (j = 0; j < selElmnt.length; j++) {
-    /*for each option in the original select element,
-    create a new DIV that will act as an option item:*/
-    c = document.createElement("DIV");
-    c.innerHTML = selElmnt.options[j].innerHTML;
-    c.addEventListener("click", function(e) {
-        /*when an item is clicked, update the original select box,
-        and the selected item:*/
-        var y, i, k, s, h;
-        s = this.parentNode.parentNode.getElementsByTagName("select")[0];
-        h = this.parentNode.previousSibling;
-        for (i = 0; i < s.length; i++) {
-          if (s.options[i].innerHTML == this.innerHTML) {
-            s.selectedIndex = i;
-            h.innerHTML = this.innerHTML;
-            y = this.parentNode.getElementsByClassName("same-as-selected");
-            for (k = 0; k < y.length; k++) {
-              y[k].removeAttribute("class");
-            }
-            this.setAttribute("class", "same-as-selected");
-            break;
-          }
-        }
-        h.click();
-    });
-    b.appendChild(c);
-  }
-  x[i].appendChild(b);
-  a.addEventListener("click", function(e) {
-      /*when the select box is clicked, close any other select boxes,
-      and open/close the current select box:*/
-      e.stopPropagation();
-      closeAllSelect(this);
-      this.nextSibling.classList.toggle("select-hide");
-      this.classList.toggle("select-arrow-active");
-    });
-}
-function closeAllSelect(elmnt) {
-  /*a function that will close all select boxes in the document,
-  except the current select box:*/
-  var x, y, i, arrNo = [];
-  x = document.getElementsByClassName("select-items");
-  y = document.getElementsByClassName("select-selected");
-  for (i = 0; i < y.length; i++) {
-    if (elmnt == y[i]) {
-      arrNo.push(i)
-    } else {
-      y[i].classList.remove("select-arrow-active");
-    }
-  }
-  for (i = 0; i < x.length; i++) {
-    if (arrNo.indexOf(i)) {
-      x[i].classList.add("select-hide");
-    }
-  }
-}
-/*if the user clicks anywhere outside the select box,
-then close all select boxes:*/
-document.addEventListener("click", closeAllSelect);</script>
 </body>
 </html>
