--- a/donors-project/index.html
+++ b/donors-project/index.html
@@ -17,7 +17,7 @@ $(document).ready(function() {
 <table id="example" class="display" style="width:100%">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Donor ID</th>
                 <th>Position</th>
                 <th>Office</th>
                 <th>Extn.</th>
@@ -27,7 +27,7 @@ $(document).ready(function() {
         </thead>
         <tfoot>
             <tr>
-                <th>Name</th>
+                <th>Donor ID</th>
                 <th>Position</th>
                 <th>Office</th>
                 <th>Extn.</th>
