--- a/donors-project/index.html
+++ b/donors-project/index.html
@@ -18,7 +18,7 @@ $(document).ready(function() {
         <thead>
             <tr>
                 <th>Donor ID</th>
-                <th>Position</th>
+                <th>First Name</th>
                 <th>Office</th>
                 <th>Extn.</th>
                 <th>Start date</th>
@@ -28,7 +28,7 @@ $(document).ready(function() {
         <tfoot>
             <tr>
                 <th>Donor ID</th>
-                <th>Position</th>
+                <th>First Name</th>
                 <th>Office</th>
                 <th>Extn.</th>
                 <th>Start date</th>
