--- a/donors-project/index.html
+++ b/donors-project/index.html
@@ -18,7 +18,7 @@ $(document).ready(function() {
 <table id="example" class="display" style="width:100%">
         <thead>
             <tr>
-                <th>Donor ID</th>
+                <th>donor_id</th>
                 <th>First Name</th>
                 <th>Office</th>
                 <th>Extn.</th>
@@ -28,7 +28,7 @@ $(document).ready(function() {
         </thead>
         <tfoot>
             <tr>
-                <th>Donor ID</th>
+                <th>donor_id</th>
                 <th>First Name</th>
                 <th>Office</th>
                 <th>Extn.</th>
